<resources>
    <string name="app_name">Github Browser</string>
    <string name="add_repo">Add Repo</string>
    <string name="owner_organization">Owner / Organization</string>
    <string name="repo_name">Repo Name</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="branch">Branch</string>
    <string name="issues">Issues</string>
    <string name="commits">Commits</string>
</resources>