<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRepoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dimen"
            android:background="@color/black"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/back_arrow"
                    android:onClick="backOnClick"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text="@string/add_repo"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:text="@string/owner_organization"
            app:fontFamily="@font/times_new_roman"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/owner_organization"
            android:background="@drawable/edittext_drawable"
            android:singleLine="true"
            android:inputType="text|textPersonName"
            android:id="@+id/ownerNameEditText"
            app:fontFamily="@font/times_new_roman"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:text="@string/repo_name"
            app:fontFamily="@font/times_new_roman"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/repo_name"
            android:background="@drawable/edittext_drawable"
            android:maxLines="2"
            android:inputType="text"
            android:id="@+id/repoNameEditText"
            app:fontFamily="@font/times_new_roman"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/add"
        android:textStyle="bold"
        android:onClick="addRepoOnClick"
        app:backgroundTint="@color/black"
        app:fontFamily="@font/times_new_roman"/>

</RelativeLayout>