<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RepoDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dimen"
        android:background="@color/black"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow"
                android:onClick="backOnClick"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/details"
                android:gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:src="@drawable/delete_drawable"
                android:onClick="deleteOnClick"
                app:tint="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/visibility_drawable"
                android:onClick="webSearchOnClick"
                app:tint="@color/white"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/repoDetailsNameTextView"
                app:fontFamily="@font/times_new_roman"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:id="@+id/repoDetailsDescriptionTextView"
                app:fontFamily="@font/times_new_roman"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/branch"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:onClick="branchTabOnClick"
                    app:backgroundTint="@color/white"
                    app:fontFamily="@font/times_new_roman"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/issues"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:onClick="issuesTabOnClick"
                    app:backgroundTint="@color/white"
                    app:fontFamily="@font/times_new_roman"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/tabTitleTextView"
                app:fontFamily="@font/times_new_roman"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:id="@+id/tabRecyclerView"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>